[package]
name = "ugrep"
version = "0.2.0"
edition = "2021"
authors = ["Larsouille"]

repository = "https://github.com/Larsouille25/ugrep/"
readme = "README.md"

license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
colored = "2.0.0"
